# backend-aihlatest

./: .gitignore  Dockerfile  main.py  pyproject.toml  pytest.ini  setup.py
chat_service/: README.md  __init__.py  chat_manager.py  router.py
chunk_builder/: __init__.py  builder.py  readme.md
chunk_builder/tests/: conftest.py  export_chunks_to_json.py  test_chunk_builder.py
collection_summary_service/: README.md  __init__.py  router.py  summarizer.py
core/: README.md  __init__.py  cleanup.py  concurrency_decorators.py  concurrency_manager.py  error_handler.py  exception_handler.py  json_utils.py  logging_config.py  middleware.py  timeout_middleware.py  workspace_manager.py
embeddings/: README.md  __init__.py  config.py  model.py
indexer/: README.md  __init__.py  config.py  fusion.py  nn_store.py  rerank.py
insights_service/: README.md  __init__.py  generator.py  router.py
outline_extractor/: __init__.py  config.py  extractor.py  heading_extractor.py  pdf_processor.py  readme.md
outline_extractor/tests/: test_extractor.py
output_JSN1/: file02.json
persona/: README.md  router.py
podcast_service/: README.md  __init__.py  performance_monitor.py  router.py  test_api.py
podcast_service/podcast_generator/: __init__.py  config.py  gemini_utils.py  main.py  models.py  tts_utils.py
relevance_service/: README.md  __init__.py  analyzer.py  router.py
scripts/: build_collection.py  download_e5_base_v2.py  download_e5_small_v2.py  query_collection.py  readme1.md  refresh_snippets.py
snippets/: README.md  generator.py
vector_store/: current_collection.txt
(+15 files in other folders)
